--- a/certificates.html
+++ b/certificates.html
@@ -195,7 +195,7 @@
   
                     <figure class="card-banner" data-reveal="left">
                       <img
-                        src="./assets/images/Graduate.png"
+                        src="./assets/images/graduate.png"
                         class="w-100"
                       />
                     </figure>
