--- a/certificates.html
+++ b/certificates.html
@@ -161,7 +161,7 @@
                 <li>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
@@ -175,7 +175,7 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
@@ -189,13 +189,13 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
                     <figure class="card-banner" data-reveal="left">
                       <img
-                        src="./assets/images/graduate.png"
+                        src="./assets/images/Graduate.png"
                         class="w-100"
                       />
                     </figure>
@@ -203,7 +203,7 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
@@ -217,7 +217,7 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
@@ -231,7 +231,7 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
@@ -245,7 +245,7 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
@@ -259,7 +259,7 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
@@ -273,7 +273,7 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
@@ -287,7 +287,7 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
@@ -301,7 +301,7 @@
                   <br>
                   <div
                   class="project-card project-card-1"
-                  style="background-color: #f8f5fb"
+                  style="background-color: #c8aae6"
                 >
 
   
