--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 data-reveal="top"
                 data-reveal-delay="0.5s"
               >
-              AWS Certified Cloud Practitioner,       Frontend Developer  
+              AWS Certified Cloud Practitioner,        Developer  
               </h1>
 
               <p
@@ -185,7 +185,7 @@
                 data-reveal="top"
                 data-reveal-delay="0.75s"
               >
-              Hi there! I'm Javier, I am a certified AWS Cloud Practitioner and currently studying for the Solutions Architect exam. I have experience in front-end technologies like JavaScript, HTML, and CSS, as well as Python and Scrum. I am deeply passionate about AWS and programming, always eager to learn and grow in these areas.
+              Hi there! I'm Javier, I am a certified AWS Cloud Practitioner and currently studying for the Solutions Architect exam. I have experience in front-end technologies like JavaScript, HTML, and CSS, as well as Python, Scrum and Terraform. I am deeply passionate about AWS and programming, always eager to learn and grow in these areas.
               </p>
 
               <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s" >
