--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 data-reveal="top"
                 data-reveal-delay="0.5s"
               >
-              AWS Certified Cloud Practitioner,        Developer  
+              DevOps Engineer - Developer - AWS Cloud Practitioner 
               </h1>
 
               <p
@@ -185,7 +185,7 @@
                 data-reveal="top"
                 data-reveal-delay="0.75s"
               >
-              Hi there! I'm Javier, I am a certified AWS Cloud Practitioner and currently studying for the Solutions Architect exam. I have experience in front-end technologies like JavaScript, HTML, and CSS, as well as Python, Scrum and Terraform. I am deeply passionate about AWS and programming, always eager to learn and grow in these areas.
+              Hi there! I'm Javier, I am a certified AWS Cloud Practitioner and currently studying for the Solutions Architect exam. I have experience in Developer technologies like JavaScript, HTML, and CSS, as well as Python, Scrum and Terraform. I am deeply passionate about AWS, DevOps and programming, always eager to learn and grow in these areas.
               </p>
 
               <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s" >
@@ -215,7 +215,7 @@
                   ✔Website design with HTML CSS and Javascript.
                 </p>
               </p><p class="section-text">
-                ✔Knowledge of Networks, Servers, Security, Linux, Python and Agile Methodologies.
+                ✔Knowledge of Networks, Servers, Security, Bash, Terraform, Linux, Python and Agile Methodologies.
               </p>
             </p><p class="section-text">
               ✔Experience working in team, performing weekly tasks in programming.
