new file:   assets/images/ArchitectureDiagram.png 	new file:   assets/images/Higher-Lower.png 	modified:   index.html 	modified:   projects.html

--- a/index.html
+++ b/index.html
@@ -434,17 +434,16 @@
                   style="background-color: #f1f5fd"
                 >
                   <div class="card-content" data-reveal="right">
-                    <p class="card-tag" style="color: #3f78e0">Web Development</p>
+                    <p class="card-tag" style="color: #3f78e0">DevOps CI/CD</p>
 
-                    <h3 class="h3 card-title">E-commerce</h3>
+                    <h3 class="h3 card-title">CloudProvisioner</h3>
 
                     <p class="card-text">
-                      Maecenas faucibus mollis interdum sed posuere consectetur
-                      est at lobortis. Scelerisque id ligula porta felis euismod
-                      semper. Fusce dapibus tellus cursus.
+                      Cloud infrastructure automation with Terraform and Github Actions: Simplify the creation and management of cloud infrastructure using Terraform, automating the deployment of resources and streamlining your development process.
+
                     </p>
 
-                    <a href="https://javieralmeida30.github.io/eMercado.github.io/" class="btn-text"  target="_blank" style="color: #3f78e0">
+                    <a href="https://github.com/javieralmeida30/CloudProvisioner" class="btn-text"  target="_blank" style="color: #3f78e0">
                       <span class="span">See Project</span>
 
                       <ion-icon
@@ -456,7 +455,7 @@
 
                   <figure class="card-banner" data-reveal="left">
                     <img
-                      src="./assets/images/project-2.png"
+                      src="./assets/images/ArchitectureDiagram.png"
                       width="600"
                       height="367"
                       loading="lazy"
