--- a/projects.html
+++ b/projects.html
@@ -151,13 +151,90 @@
           <br>
           <h2 class="h2 section-title" id="project-label" style="margin-left:130px;">
             My Projects
+            <a href="https://github.com/javieralmeida30/CloudProvisioner" class="btn-text"  target="_blank" style="color:#a07cc5"> ->My Github projects<- </a>
+             
           </h2>
+          
           <div class="container" id='projectos'>
             <div class="title-wrapper" data-reveal="top">
 
             </div>
 
             <ul class="grid-list">
+              <li>
+                <div
+                  class="project-card project-card-2"
+                  style="background-color: #f1f5fd"
+                >
+                  <div class="card-content" data-reveal="right">
+                    <p class="card-tag" style="color: #3f78e0">DevOps CI/CD</p>
+
+                    <h3 class="h3 card-title">CloudProvisioner</h3>
+
+                    <p class="card-text">
+                      Cloud infrastructure automation with Terraform and Github Actions: Simplify the creation and management of cloud infrastructure using Terraform, automating the deployment of resources and streamlining your development process.
+
+                    </p>
+
+                    <a href="https://github.com/javieralmeida30/CloudProvisioner" class="btn-text"  target="_blank" style="color: #3f78e0">
+                      <span class="span">See Project</span>
+
+                      <ion-icon
+                        name="arrow-forward-outline"
+                        aria-hidden="true"
+                      ></ion-icon>
+                    </a>
+                  </div>
+
+                  <figure class="card-banner" data-reveal="left">
+                    <img
+                      src="./assets/images/ArchitectureDiagram.png"
+                      width="600"
+                      height="367"
+                      loading="lazy"
+                      alt="Web Design"
+                      class="w-100"
+                    />
+                  </figure>
+                </div>
+              </li>
+              <li>
+                <div
+                  class="project-card project-card-2"
+                  style="background-color: #f1f5fd"
+                >
+                  <div class="card-content" data-reveal="right">
+                    <p class="card-tag" style="color: #3f78e0">Python Console Games</p>
+
+                    <h3 class="h3 card-title">Higher-Lower-Game</h3>
+
+                    <p class="card-text">
+                      I made several interactive console games in python, this is a game to guess who has more followers, storing the data.
+                    </p>
+
+                    <a href="https://github.com/javieralmeida30/Higher-Lower-Game" class="btn-text"  target="_blank" style="color: #3f78e0">
+                      <span class="span">See Project</span>
+
+                      <ion-icon
+                        name="arrow-forward-outline"
+                        aria-hidden="true"
+                      ></ion-icon>
+                    </a>
+                  </div>
+
+                  <figure class="card-banner" data-reveal="left">
+                    <img
+                      src="./assets/images/Higher-Lower.png"
+                      width="600"
+                      height="367"
+                      loading="lazy"
+                      alt="Web Design"
+                      class="w-100"
+                    />
+                  </figure>
+                </div>
+              </li>
+
                 <li>
                   <div
                   class="project-card project-card-1"
